compiler/tests/language/negative/oopSurfaceRoleCapability/associated/wrongAssociatedSurfaceAccess.qn
pub wrongAssociatedAccess(
  ctx: HttpCtx<AuthUser, Session<UserSession>, CsrfToken, JsonBody<CreateUserBody>>
) -> bool {
  return ctx.context.requiresAuth
}
